[package]
name = "interlock"
version = "0.0.0"
authors = ["yvt <i@yvt.jp>"]
license = "MIT/Apache-2.0"
edition = "2021"
readme = "README.md"
description = "Readers-writer locks optimized for interval locks"
categories = ["no-std"]
repository = "https://github.com/yvt/interlock-rs"

[features]
doc_cfg = []
default = ["std"]
std = [
	"stable_deref_trait/std",
	"thiserror",
]

[dependencies]
futures = { version = "0.3.16", default-features = false }
pin-utils = "0.1.0"
pin-project = "1.0.8"
pin-cell = "0.1.1"
stable_deref_trait = { version = "1.2.0", default-features = false }
thiserror = { version = "1.0.28", optional = true }
lock_api = "0.4.5"

[dev-dependencies]
quickcheck_macros = "1.0.0"
env_logger = "0.8.4"
quickcheck = "1.0.3"
log = "0.4.8"
parking_lot = "0.11.2"
tokio = { version = "1.11", features = ["rt-multi-thread", "rt", "macros", "time"] }
futures = "0.3.16"
cryo = "0.2.3"
rand = "0.8.4"

[package.metadata.docs.rs]
all-features = true
