[package]
name = "interlock"
version = "0.0.3"
authors = ["yvt <i@yvt.jp>"]
license = "MIT/Apache-2.0"
edition = "2021"
readme = "README.md"
description = "Readers-writer locks designed for locking intervals"
categories = ["no-std"]
repository = "https://github.com/yvt/interlock-rs"

[features]
doc_cfg = []
default = []
async = ["lock_api"]
std = [
    "stable_deref_trait/std",
    "thiserror",
    "alloc",
]
alloc = [
    "stable_deref_trait/alloc",  #  we want `StableDeref` for `Vec<T>`
]

[dependencies]
futures = { version = "0.3.16", default-features = false }
pin-utils = "0.1.0"
pin-project = "1.0.8"
pin-cell = "0.2.0"
stable_deref_trait = { version = "1.2.0", default-features = false }
thiserror = { version = "1.0.28", optional = true }
lock_api = { version = "0.4.5", optional = true }
cfg-if = "1.0.0"

[dev-dependencies]
quickcheck_macros = "1.0.0"
criterion = "0.3.5"
env_logger = "0.8.4"
quickcheck = "1.0.3"
log = "0.4.8"
parking_lot = "0.11.2"
tokio = { version = "1.11", features = ["rt-multi-thread", "rt", "macros", "time"] }
futures = "0.3.16"
cryo = "0.3.0"
rand = "0.8.4"

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "slice_vs_naive"
harness = false
